xee-xpath/tests/snapshots/xpath__absent_context.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\".\")"
---
Err(
    SpannedError {
        error: Error {
            code: XPDY0002,
            message: Some(
                "Component absent in dynamic context.",
            ),
        },
        span: Some(
            SourceSpan(
                0,
                1,
            ),
        ),
    },
)
