xee-xpath/tests/snapshots/xpath__absent_context_with_operation.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\". + 1\")"
---
Err(
    SpannedError {
        error: Error {
            code: XPDY0002,
            message: Some(
                "Component absent in dynamic context.",
            ),
        },
        span: Some(
            SourceSpan(
                0,
                5,
            ),
        ),
    },
)
