xee-xpath/tests/snapshots/xpath__case_as_hex_binary_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'f' cast as xs:hexBinary\")"
---
Err(
    SpannedError {
        error: Error {
            code: FORG0001,
            message: Some(
                "Invalid value for cast/constructor.",
            ),
        },
        span: Some(
            SourceSpan(
                0,
                24,
            ),
        ),
    },
)
