xee-xpath/tests/snapshots/xpath__cast_as_base64_binary_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'flurb' cast as xs:base64Binary\")"
---
Err(
    SpannedError {
        error: Error {
            code: FORG0001,
            message: Some(
                "Invalid value for cast/constructor.",
            ),
        },
        span: Some(
            SourceSpan(
                0,
                31,
            ),
        ),
    },
)
