xee-xpath/tests/snapshots/xpath__cast_as_language_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'en us' cast as xs:language\")"
---
Err(
    SpannedError {
        error: Error {
            code: FORG0001,
            message: Some(
                "Cannot cast to xs:language: en us (xs:string)",
            ),
        },
        span: Some(
            SourceSpan(
                0,
                27,
            ),
        ),
    },
)
