xee-xpath/tests/snapshots/xpath__cast_as_name_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'foo bar' cast as xs:Name\")"
---
Err(
    SpannedError {
        error: Error {
            code: FORG0001,
            message: Some(
                "Cannot cast to xs:Name: foo bar (xs:string)",
            ),
        },
        span: Some(
            SourceSpan(
                0,
                25,
            ),
        ),
    },
)
