xee-xpath/tests/snapshots/xpath__cast_as_ncname_with_colon_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'foo:bar' cast as xs:NCName\")"
---
Err(
    SpannedError {
        error: Error {
            code: FORG0001,
            message: Some(
                "Cannot cast to xs:NCName: foo:bar (xs:string)",
            ),
        },
        span: Some(
            SourceSpan(
                0,
                27,
            ),
        ),
    },
)
