xee-xpath/tests/snapshots/xpath__cast_as_nmtoken_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'foo bar' cast as xs:NMTOKEN\")"
---
Err(
    SpannedError {
        error: Error {
            code: FORG0001,
            message: None,
        },
        span: Some(
            SourceSpan(
                0,
                28,
            ),
        ),
    },
)
