xee-xpath/tests/snapshots/xpath__cast_as_qname_fails_illegal_value.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'bar baz' cast as xs:QName\")"
---
Err(
    SpannedError {
        error: Error {
            code: FORG0001,
            message: Some(
                "Cannot cast as xs:QName: bar baz (xs:string)",
            ),
        },
        span: Some(
            SourceSpan(
                0,
                26,
            ),
        ),
    },
)
