xee-xpath/tests/snapshots/xpath__cast_as_qname_fails_multiple_prefixes.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'xs:bar:baz' cast as xs:QName\")"
---
Err(
    SpannedError {
        error: Error {
            code: FORG0001,
            message: Some(
                "Cannot cast as xs:QName: xs:bar:baz (xs:string)",
            ),
        },
        span: Some(
            SourceSpan(
                0,
                29,
            ),
        ),
    },
)
