xee-xpath/tests/snapshots/xpath__cast_date_time_stamp.snap
---
source: xee-xpath/tests/xpath.rs
assertion_line: 1011
expression: "run(\"'2019-01-01T00:00:00.123+01:00' cast as xs:dateTimeStamp\")"
---
Ok(
    One(
        One {
            item: Atomic(
                DateTimeStamp(
                    2019-01-01T00:00:00.123+01:00,
                ),
            ),
        },
    ),
)
